[package]
name = "xdump"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"

clap = { version = "4.4.18", features = ["derive"] }
clap-serde-derive = "*"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.31"

pnet = "0.34.0"
pcap-file = "2.0.0"

tokio = { version = "1.36.0", features = ["full"] }
rayon = "1.8.0"

slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.8.0"

lazy_static = "1.4.0"
once_cell = "1.19.0"

chrono = "0.4.34"
